// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutModalBoxCloseButton Test 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-about-modal-box__close"
  >
    <button
      aria-label="Close Dialog"
      class="pf-v6-c-button pf-m-plain"
      data-ouia-component-id="OUIA-Generated-Button-plain-:r0:"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`AboutModalBoxCloseButton Test close button aria label 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-about-modal-box__close"
  >
    <button
      aria-label="Klose Daylok"
      class="pf-v6-c-button pf-m-plain"
      data-ouia-component-id="OUIA-Generated-Button-plain-:r2:"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`AboutModalBoxCloseButton Test onclose 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-about-modal-box__close"
  >
    <button
      aria-label="Close Dialog"
      class="pf-v6-c-button pf-m-plain"
      data-ouia-component-id="OUIA-Generated-Button-plain-:r1:"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;
